--- a/src/index.html
+++ b/src/index.html
@@ -7,30 +7,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Naive Test Page for Degis Insurance</title>
     <link rel="stylesheet" href="./index.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="content">
-        <h1 id="title">Insurance Product</h1>
-        <h2 id="info"></h2>
-        <div id="policyflow">
-            <div>
-                <label for="mint_number">输入铸造Degis数量</label>
-                <input type="text" id="mint_number">
+    <div class="container" id="header">
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-sm-push-2">
+                <h1 class="text-center">Degis Insurance</h1>
+                <hr />
+                <br />
             </div>
-            <br>
-            <div>
-                <label for="minter">输入你的地址</label>
-                <input type="text" id="minter">
-            </div>
-            <br>
-            <button id="mint">点击铸造</button>
         </div>
     </div>
-    <script src="js/index.js"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
+
+    <div id="content">
+
+        <div class="container" id="mintpart">
+            <h2>Mint Part</h2>
+            <br>
+            <div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <label for="mint_number">输入铸造Degis数量</label>
+                        <input type="text" id="mint_number">
+                        <br />
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <label for="minter">输入你的地址</label>
+                        <input type="text" id="minter">
+                        <br />
+                    </div>
+                </div>
+                <br>
+                <button id="mint">点击铸造</button>
+            </div>
+            <hr />
+        </div>
+        <div class="container" id="policypart">
+            <h2>Policy Part</h2>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <label for="flight_number">输入航班号</label>
+                    <input type="text" id="flight_number">
+                    <br />
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <label for="flight_day">输入日期</label>
+                    <input type="text" id="flight_day">
+                    <br />
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <label for="policy_number">输入数量</label>
+                    <input type="text" id="policy_number">
+                    <br />
+                </div>
+            </div>
+            <br>
+            <button id="buypolicy">购买保险</button>
+            <hr />
+        </div>
+        <div class="container" id="userpart">
+            <div class="col-md-12 col-sm-12">
+                <button>show my polices</button>
+                <br />
+                <span class="border border-danger">User's Policies</span>
+            </div>
+        </div>
+        <script src="js/index.js"></script>
+        <script src="js/web3.min.js"></script>
+        <script src="js/truffle-contract.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    </div>
 </body>
 
 </html>
