--- a/src/index.html
+++ b/src/index.html
@@ -7,31 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Naive Test Page for Degis Insurance</title>
     <link rel="stylesheet" href="./index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container" id="header">
-        <div class="row">
-            <div class="col-md-12 col-sm-12 col-sm-push-2">
-                <h1 class="text-center">Degis Insurance</h1>
-                <hr />
-                <br />
-            </div>
+    <div class="min-h-full flex flex-col items-center">
+        <img class="mx-auto mt-8 sm:mt-10 w-10 sm:w-12 h-10 sm:h-12" src="img/verified.png" />
+        <h1
+            class="max-w-lg mt-8 mx-6 text-gray-900 text-2xl sm:text-3xl text-center font-semibold leading-snug tracking-wider">
+            Degis is an <span class="text-indigo-600">ecosystem</span> for <span class="text-indigo-600">decentralized
+                insurance</span>
+        </h1>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 sm:mx-8 mt-12 md:mt-16 gap-8">
+        <div class="flex flex-col max-w-xs p-6 sm:p-8 pb-8 sm:pb-10 bg-white rounded-md text-center">
+            <h3 class="text-gray-900 text-md sm:text-lg font-semibold tracking-wider">
+                Mint Test
+            </h3>
+            <input class="mx-auto block mt-6 sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-gray-100
+                 mono border-4 text-sm sm:text-md text-blue-500 font-semibold tracking-wide" id="mintnum">
+            输入数量
+            </input>
+            <input class="mx-auto block mt-6 sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-gray-100
+                 mono border-4 text-sm sm:text-md text-blue-500 font-semibold tracking-wide" id="mintnum">
+            输入地址
+            </input>
+            <a href="https://alpha.charm.fi">
+                <button
+                    class="mx-auto block mt-6 sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-indigo-600 hover:bg-indigo-500 mono text-sm sm:text-md text-white font-semibold tracking-wide">
+                    Mint Tokens
+                </button>
+            </a>
         </div>
     </div>
 
     <div id="content">
 
         <div class="container" id="mintpart">
-            <h2>Mint Part</h2>
+            <h2 class="mx-auto text-gray-600 text-xl">Mint Part</h2>
             <br>
             <div>
                 <div class="row">
                     <div class="col-md-12 col-sm-12">
                         <label for="mint_number">输入铸造Degis数量</label>
-                        <input type="text" id="mint_number">
+                        <input class="w-100 h-10 border-4" type="text" id="mint_number">
                         <br />
                     </div>
                 </div>
@@ -39,21 +61,24 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12">
                         <label for="minter">输入你的地址</label>
-                        <input type="text" id="minter">
+                        <input class="w-100 h-10 border-4" type="text" id="minter">
                         <br />
                     </div>
                 </div>
-                <br>
-                <button id="mint">点击铸造</button>
+
+                <button
+                    class="ml-2 mb-10 block sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-indigo-800 hover:bg-indigo-500 mono text-sm sm:text-md text-white font-semibold"
+                    id="mint">点击铸造</button>
             </div>
             <hr />
         </div>
         <div class="container" id="policypart">
-            <h2>Policy Part</h2>
+            <h2 class="mt-10 mx-auto text-gray-600 text-xl">Policy Part</h2>
+            <br>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <label for="flight_number">输入航班号</label>
-                    <input type="text" id="flight_number">
+                    <input class="w-100 h-10 border-4" type="text" id="flight_number">
                     <br />
                 </div>
             </div>
@@ -61,7 +86,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <label for="flight_day">输入日期</label>
-                    <input type="text" id="flight_day">
+                    <input class="w-100 h-10 border-4" type="text" id="flight_day">
                     <br />
                 </div>
             </div>
@@ -69,19 +94,23 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <label for="policy_number">输入数量</label>
-                    <input type="text" id="policy_number">
+                    <input class="w-100 h-10 border-4" type="text" id="policy_number">
                     <br />
                 </div>
             </div>
             <br>
-            <button id="buypolicy">购买保险</button>
+            <button
+                class="ml-2 mb-10 block sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-indigo-800 hover:bg-indigo-500 mono text-sm sm:text-md text-white font-semibold"
+                id="buypolicy">购买保险</button>
             <hr />
         </div>
         <div class="container" id="userpart">
             <div class="col-md-12 col-sm-12">
-                <button>show my polices</button>
+                <button
+                    class="ml-2 mb-10 block sm:mt-8 px-5 sm:px-6 py-3 sm:py-4 rounded-sm bg-indigo-800 hover:bg-indigo-500 mono text-sm sm:text-md text-white font-semibold">show
+                    my polices</button>
                 <br />
-                <span class="border border-danger">User's Policies</span>
+                <div class="border-4 w-full">User's Policies</div>
             </div>
         </div>
         <script src="js/index.js"></script>
