--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </h1>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 sm:mx-8 mt-12 md:mt-16 gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 sm:mx-8 mt-12 md:mt-16 gap-8" id="minttest">
         <div class="flex flex-col max-w-xs p-6 sm:p-8 pb-8 sm:pb-10 bg-white rounded-md text-center">
             <h3 class="text-gray-900 text-md sm:text-lg font-semibold tracking-wider">
                 Mint Test
@@ -44,9 +44,12 @@
         </div>
     </div>
 
+
+
+
     <div id="content">
 
-        <div class="container" id="mintpart">
+        <div id="mintpart">
             <h2 class="mx-auto text-gray-600 text-xl">Mint Part</h2>
             <br>
             <div>
