--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                 <div class="border-4 w-full">User's Policies</div>
             </div>
         </div>
-        <script src="js/index.js"></script>
+        <script src="js/App.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
