--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Policy1</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Show the policy info</p>
                     <a href="#" class="card-link">Card link</a>
                     <a href="#" class="card-link">Another link</a>
                 </div>
@@ -98,13 +97,15 @@
 
         <div class="border" id="poolpart">
             <button type="button" class="btn btn-primary btn-getpoolinfo">Show the pool info</button>
+            <div class="alert alert-light" role="alert">
+                Poolinfo: DegisPerShare, Poolname, PoolId....
+            </div>
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">LP Token
                     </h5>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Show the pool info</p>
                     <a href="#" class="card-link">Card link</a>
                     <a href="#" class="card-link">Another link</a>
                 </div>
@@ -121,8 +122,7 @@
                     <h5 class="card-title">LP Token
                     </h5>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Show the liquidity part</p>
                     <a href="#" class="card-link">Card link</a>
                     <a href="#" class="card-link">Another link</a>
                 </div>
