--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,25 @@
         </div>
 
 
+        <div class="border" id="oraclepart">
+            <form>
+                <h2 class="mx-auto">Oracle Part</h2>
+                <div class="form-group">
+                    <label for="fightNumber">输入航班号</label>
+                    <input class="form-control" type="text" id="flightNumber">
+                </div>
+                <div class="form-group">
+                    <label for="policyOrder">输入policy order</label>
+                    <input class="form-control" type="text" id="policyOrder">
+                </div>
+                <div class="form-group">
+                    <label for="date">输入日期(YYYYMMDD)</label>
+                    <input class="form-control" type="text" id="date">
+                </div>
+                <button type="button" class="btn btn-primary btn-oracle">press to request oracle</button>
+            </form>
+        </div>
+
 
 
         <div class="border" id="poolpart">
