--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,13 @@
         <button type="button" class="btn btn-primary btn-updatepooladdress">Update Pool Address</button>
     </div>
 
+    <div class="border" id="poolpart">
+        <h2>Pool Info</h2>
+        <br>
+        <button type="button" class="btn btn-primary btn-getpoolinfo">Show the pool info</button>
+        <!-- <button type="button" class="btn btn-primary btn-changeCollateralFactor">Change Collateral Factor</button> -->
+    </div>
+
     <div class="border" id="updatepart">
         <h2 class="mx-auto">Update Policy Flow Address</h2>
         <p>为InsurancePool和PolicyToken合约设置新的PolicyFlow地址</p>
@@ -46,7 +53,7 @@
     <div id="content">
         <div class="border" id="mintpart">
             <form>
-                <h2 class="mx-auto">Pass Minter Role(Degis)</h2>
+                <h2 class="mx-auto">Pass Minter Role (Degis & LP)</h2>
                 <!-- <div class="form-group">
                     <label for="mint_number">输入铸造Degis数量</label>
                     <input class="form-control" type="text" id="mint_number" placeholder="100">
@@ -64,23 +71,25 @@
 
         <div class="border" id="stakepart">
             <form>
-                <h2 class="mx-auto">Stake / Unstake Part</h2>
+                <h2 class="mx-auto">Stake / Unstake</h2>
                 <div class="form-group">
                     <label for="stake_number">输入质押/提取的USDC数量</label>
                     <input class="form-control" type="text" id="stake_number">
                     <small id="stake_number_help" class="form-text text-muted">decimals:18</small>
                 </div>
-                <button type="button" class="btn btn-primary btn-stake">press to stake</button>
-                <button type="button" class="btn btn-primary btn-unstake">press to unstake</button>
-                <button type="button" class="btn btn-primary btn-allowance">press to check allowance</button>
+                <button type="button" class="btn btn-primary btn-stake">Press to stake</button>
+                <button type="button" class="btn btn-primary btn-unstake">Press to unstake</button>
+                <button type="button" class="btn btn-primary btn-allowance">Press to check allowance</button>
             </form>
         </div>
 
         <div class="border" id="lppart">
             <button type="button" class="btn btn-primary btn-LPInfo">Show my liquidity</button>
-            <div class="alert alert-light" role="alert">
-                LP's asset:
-            </div>
+            <!-- <div class="alert alert-light" role="alert">
+                LP's asset
+            </div> -->
+            <br>
+            <br>
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">LP Token
@@ -91,9 +100,16 @@
             </div>
         </div>
 
+        <div class="border" id="harvestpart">
+            <h2 class="mx-auto">Harvest Reward</h2>
+            <br>
+            <button type="button" class="btn btn-primary btn-harvestDegis">Harvest Degis Token</button>
+            <button type="button" class="btn btn-primary btn-harvestPremium">Harvest Premium</button>
+        </div>
+
         <div class="border" id="policypart">
             <form>
-                <h2 class="mx-auto">Policy Part</h2>
+                <h2 class="mx-auto">Buy New Policy</h2>
                 <div class="form-group">
                     <label for="userAddress">输入被保险人地址</label>
                     <input class="form-control" type="text" id="userAddress">
@@ -111,16 +127,31 @@
                     <label for="premium">保费</label>
                     <input class="form-control" type="text" id="premium" placeholder="">
                 </div>
-                <button type="button" class="btn btn-primary btn-buy">press to buy</button>
-                <button type="button" class="btn btn-primary btn-rand">get randomness</button>
-                <button type="button" class="btn btn-primary btn-totalpolicy">get total policies in the pool</button>
+                <button type="button" class="btn btn-primary btn-buy">Press to buy</button>
+                <button type="button" class="btn btn-primary btn-rand">Get randomness</button>
+                <button type="button" class="btn btn-primary btn-totalpolicy">Get total policies in the pool</button>
             </form>
+        </div>
+
+        <div class="border" id="userpart">
+            <button type="button" class="btn btn-primary btn-userpolicy">Show my policies</button>
+            <!-- <div class="alert alert-light" role="alert">
+                User's policies
+            </div> -->
+            <br>
+            <br>
+            <div class="card" style="width: 50rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Policy Number & Info</h5>
+                    <p id="userpolicy-show">hello</p>
+                </div>
+            </div>
         </div>
 
 
         <div class="border" id="oraclepart">
             <form>
-                <h2 class="mx-auto">Oracle Part</h2>
+                <h2 class="mx-auto">Request Oracle</h2>
                 <div class="form-group">
                     <label for="fightNumber">输入航班号</label>
                     <input class="form-control" type="text" id="flightNumber">
@@ -130,48 +161,27 @@
                     <input class="form-control" type="text" id="policyOrder">
                 </div>
                 <div class="form-group">
-                    <label for="date">输入日期(YYYYMMDD)</label>
+                    <label for="date">输入日期(timestamp)</label>
                     <input class="form-control" type="text" id="date">
                 </div>
-                <button type="button" class="btn btn-primary btn-oracle">press to request oracle</button>
+                <button type="button" class="btn btn-primary btn-oracle">Press to request oracle</button>
             </form>
-        </div>
-
-        <div class="border" id="userpart">
-            <button type="button" class="btn btn-primary btn-userpolicy">Show my policies</button>
-            <div class="alert alert-light" role="alert">
-                User's policies:
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Policy Number</h5>
-                    <p id="userpolicy-show">hello</p>
-                </div>
-            </div>
         </div>
 
         <div class="border" id="calcpart">
             <form>
-                <h2 class="mx-auto">Calculate Part</h2>
+                <h2 class="mx-auto">Fixed Point Math</h2>
                 <div class="form-group">
-                    <label for="numerator">输入除数</label>
+                    <label for="numerator">输入除数/乘数</label>
                     <input class="form-control" type="text" id="numerator">
                 </div>
                 <div class="form-group">
-                    <label for="denominator">输入被除数</label>
+                    <label for="denominator">输入被除数/被乘数</label>
                     <input class="form-control" type="text" id="denominator">
                 </div>
                 <button type="button" class="btn btn-primary btn-calc">press to calculate</button>
             </form>
         </div>
-
-
-
-        <div class="border" id="poolpart">
-            <button type="button" class="btn btn-primary btn-getpoolinfo">Show the pool info</button>
-            <button type="button" class="btn btn-primary btn-changeCollateralFactor">Change Collateral Factor</button>
-        </div>
-
 
 
 
