clean up test, policytoken, policyflow

--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
 
         <div class="border" id="calcpart">
             <form>
-                <h2 class="mx-auto">Fixed Point Math</h2>
+                <h2 class="mx-auto">Fixed Point Math(18 decimals)</h2>
                 <div class="form-group">
                     <label for="numerator">输入除数/乘数</label>
                     <input class="form-control" type="text" id="numerator">
